--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.3",
     "react-world-flags": "^1.5.1",
     "sass": "^1.56.1"
