--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -25,5 +25,6 @@
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.4"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
